--- a/ubuntu/conf/lamp/teste.html
+++ b/ubuntu/conf/lamp/teste.html
@@ -15,7 +15,7 @@
 <!DOCTYPE html>
 	<html lang="pt-br">
 		<head>
-			<title>Teste da Linguagem HTML</title>
+			<title>guifrans </title>
 			<meta charset="utf-8">
 		</head>
 		<body>
@@ -27,6 +27,7 @@
 			Facebook: <a href="facebook.com/BoraParaPratica">Bora Para Pratica</a><br>
 			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
 			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
-			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x <br>
+			editado por: guifrans
 		</body>
 	</html>
